feat(anime): harden API, typed JPQL rows, tests
Made-with: Cursor